--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Derek</title>
+    <title>Derek Netto</title>
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Retina.js - Load first for faster HQ mobile images. -->
@@ -215,7 +215,7 @@
                             <span class="project-name">Gas Pipe Inspection Robot</span>
                             <span class="project-description">Trenchless Inspection of Cased Pipes</span>
                             <hr class="colored">
-                            <a href="#portfolioModal2" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="#portfolioModalHBR" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
+                        <!-- <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt=""> -->
                     </div>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                 <div class="col-lg-12">
                     <div id="portfoliolist">
                         <!-- Muscle Gaming -->
-                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalEMG" data-toggle="modal">
+                        <div class="portfolio biomedical" data-cat="apps" href="#portfolioModalEMG" data-toggle="modal">
                             <div class="portfolio-wrapper">
                                 <img src="assets/img/EMG/EMGhandMAN.jpg" alt="">
                                 <div class="caption">
@@ -710,7 +710,6 @@
             </div>
         </div>
     </div>
-
     <!-- BIOLOGICAL INJECTION SYSTEM -->
     <div class="portfolio-modal modal fade" id="portfolioModalBIS" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
         <div class="modal-content">
@@ -732,6 +731,38 @@
                         <div class="col-lg-12">
                             <img src="assets/img/BIS/obama.jpg" class="img-responsive img-centered" alt="">
                             <p>Meeting President Obama at Science & Engineering Fair</p>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- HONEYBEE ROBOTICS -->
+    <div class="portfolio-modal modal fade" id="portfolioModalHBR" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>Honeybee Robotics</h2>
+                            <hr class="colored">
+                            <p></p>
+                            <h4>PIPE INSPECTION ROBOT</h4>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/honeybee/honeybee_summerbot.jpg" class="img-responsive img-centered" alt="">
+                            <p>Trenchless pipe inspection technologies are a powerful tool for utilities and pipeline operators. But how do you access a pipe that was never designed to be inspected?</p>
+                            <p>Honeybee Robotics worked with NYSEARCH, the Northeast Gas Association’s research and development branch, to design, build and test a novel approach to natural gas distribution cased pipe sections. This robot inspection system can access pipes that were previously accessible only by costly and disruptive excavation.</p>
+                            <p>Our approach uses a patent-pending magnetic Mecanum wheel technology to navigate into the annular space between the pipeline and casing. Operators can then navigate the vehicle and get real-time images of the pipe for pre-excavation inspection, or as an alternative to excavation. This technology is broadly applicable to cased natural gas distribution lines, and helps operators comply with new, stringent Federal inspection rules.</p>
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
