--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Hi, I'm Derek</h1>
                     <hr class="colored">
-                    <p>I am an engineer based in New York City. I have a professional background in software engineering, and am pursuing a degree in biomedical engineering from Columbia University.</p>
+                    <p>I am an engineer based in New York City. I have a professional background in software engineering, and an academic background in biomedical engineering from Columbia University.</p>
                     <p>My interests include biotech, brain-computer interfaces, neurogaming, iOS development, and tech education.</p>
                     <p>My hobbies include classical guitar, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
                 </div>
@@ -168,7 +168,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
-                    <span class="quote">Engineering is a form of 
+                    <span class="quote">Engineering is a form of
                         <span class="text-primary">art</span> and has filled the world with things of obvious visual
                     <span class="text-primary">beauty</span> but also with subtle forms
                     </span>
@@ -503,7 +503,7 @@
                         </div>
                         <div class="col-lg-12">
                          <h4>IEEE Brain Initiative Award for Innovation, Execution, and Impact of BCI Application</h4>
-                        </div>   
+                        </div>
                         <div class="col-lg-12">
                               <iframe src="https://player.vimeo.com/video/184381799?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
@@ -629,7 +629,7 @@
                         </div>
                         <div class="col-lg-12">
                          <h4>1st Place - Diversity in Tech Hackathon</h4>
-                        </div>   
+                        </div>
                         <div class="col-lg-12">
                             <iframe src="https://player.vimeo.com/video/160543511?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
