--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <div class="col-md-6 text-center">
                     <h1>Hi, I'm Derek</h1>
                     <hr class="colored">
-                    <p>I am an engineer based in New York City. I have a professional background in software engineering, and an academic background in biomedical engineering from Columbia University.</p>
+                    <p>I am an engineer based in New York City. I studied biomedical engineering at Columbia University and computer science at Cornell University.</p>
                     <p>My interests include biotech, brain-computer interfaces, neurogaming, iOS development, and tech education.</p>
-                    <p>My hobbies include classical guitar, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
+                    <p>My hobbies include classical guitar, muay thai boxing, Gundam model building, skateboarding, and  playing cards.</p>
                 </div>
             </div>
         </div>
@@ -143,8 +143,8 @@
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                     <div class="about-content">
                         <i class="fa fa-code fa-4x"></i>
-                        <h3>Software Engineering</h3>
-                        <p>Neuromatters</p>
+                        <h3>Computer Science</h3>
+                        <p>Cornell University</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
